[gd_scene load_steps=14 format=3 uid="uid://bosm1qcok5w17"]

[ext_resource type="Script" uid="uid://b52cxmd1mk78g" path="res://game/gameplay/enemies/enemy_sphere/enemy_sphere.gd" id="1_wfkwf"]
[ext_resource type="Script" uid="uid://dkb4crivrkpke" path="res://game/gameplay/components/mesh_anchor.gd" id="2_5m1cx"]
[ext_resource type="PackedScene" uid="uid://djv6ctwkxips0" path="res://game/gameplay/enemies/enemy_sphere/lime/enemy_sphere_mesh_lime.tscn" id="3_wfkwf"]
[ext_resource type="Script" uid="uid://pjqqau73xcwd" path="res://game/gameplay/components/health_component.gd" id="4_pqnpx"]
[ext_resource type="Script" uid="uid://btv2e13p4ifjo" path="res://game/gameplay/enemies/shooter_component.gd" id="5_vp7gt"]
[ext_resource type="Resource" uid="uid://jxwfm8g3nrgg" path="res://data/game/shooter_patterns/lime_enemy_pattern.tres" id="6_o60vp"]
[ext_resource type="Script" uid="uid://d657ej0ut2e7" path="res://game/gameplay/components/loopable_component.gd" id="7_7y2kj"]
[ext_resource type="Script" uid="uid://dovoymatk0481" path="res://game/gameplay/components/animation_component.gd" id="9_lx6vy"]
[ext_resource type="Script" uid="uid://bc73a7lf0roe6" path="res://game/gameplay/enemies/enemy_sphere/lime/lime_enemy_movement_controller.gd" id="9_o60vp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_61msn"]
radius = 0.75
height = 2.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xsfl5"]
radius = 0.8

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ahaa"]
animation = &"Idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2xvkl"]
allow_transition_to_self = true
states/Idle/node = SubResource("AnimationNodeAnimation_5ahaa")
states/Idle/position = Vector2(535, 100)

[node name="EnemySphereLime" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 129
script = ExtResource("1_wfkwf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_61msn")

[node name="MeshAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_5m1cx")

[node name="Mesh" parent="MeshAnchor" instance=ExtResource("3_wfkwf")]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_pqnpx")
max_health = 1.0
metadata/_custom_type_script = "uid://pjqqau73xcwd"

[node name="ShooterComponent" type="Node3D" parent="."]
script = ExtResource("5_vp7gt")
pattern = ExtResource("6_o60vp")
metadata/_custom_type_script = "uid://btv2e13p4ifjo"

[node name="LoopableComponent" type="Area3D" parent="."]
script = ExtResource("7_7y2kj")
metadata/_custom_type_script = "uid://d657ej0ut2e7"

[node name="CollisionShape3D" type="CollisionShape3D" parent="LoopableComponent"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xsfl5")
debug_color = Color(0.843285, 0.00105868, 0.915671, 0.42)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2xvkl")
script = ExtResource("9_lx6vy")

[node name="EnemyMovementController" type="Node3D" parent="."]
script = ExtResource("9_o60vp")
look_at_player = true
speed = 6.0
